Uploaded image for project: 'Apache HAWQ'
  1. Apache HAWQ
  2. HAWQ-1594

Memory leak in standby master (gpsyncagent process)

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • backlog, 2.4.0.0
    • None
    • None

    Description

      In a high workload scenario, the gpsyncagent process of standby master consumes memory continuously until restart it.

      There are some Memory leak happened.

       

      Attachments

        Issue Links

          Activity

            People

              hongxu ma Hongxu Ma
              hongxu ma Hongxu Ma
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: