HAWQ-1594. Memory leak in standby master (gpsyncagent process)